# cafebrain

experiments/: .mise.toml
experiments/src/: .mise.toml
experiments/src/expr1/: .env  .gitignore  .mise.toml  .pc_env  Untitled.ipynb  main.py  pixi.toml  process-compose.yaml  pyproject.toml  requirements.in  requirements.txt  taskfile.yaml
experiments/src/expr1/src/: e2e.ipynb  flowtest.py  test.ipynb
