[project]
name = "expr1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
  "couler",
  "dvc[hdfs,s3,ssh,webdav]>=3.59.1",
  "fastapi>=0.115.11",
  "mlflow>=2.20.3",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
]

[tool.uv]
python-preference = "managed"

[tool.uv.pip]
index-url = "https://mirrors.aliyun.com/pypi/simple"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'win32' and sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'win32' and sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
couler = { git = "https://github.com/couler-proj/couler" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
