[project]
name = "expr1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
  "fastapi>=0.115.11",
  "hyperopt>=0.2.7",
  "keras>=3.9.0",
  "mlflow>=2.20.3",
  "pandas>=2.2.3",
  "psutil>=7.0.0",
  "pydantic>=2.10.6",
  "pynvml>=12.0.0",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.6.1",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "virtualenv>=20.29.3",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "jupyterlab>=4.3.5",
  "couler",
  "dvc[hdfs,s3,ssh,webdav]>=3.59.1",
  "doit>=0.36.0",
  "ipywidgets>=8.1.5",
]

[tool.uv]
python-preference = "managed"

[tool.uv.pip]
index-url = "https://mirrors.aliyun.com/pypi/simple"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'win32' and sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'win32' and sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
couler = { git = "https://github.com/couler-proj/couler" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
